--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,3 +1,6 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^\.travis\.yml$
+^src/libxlsxwriter/.git$
+^src/libxlsxwriter/.indent.pro$
+^src/libxlsxwriter/.travis.yml$
