--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: RcppXLSXwriter
 Type: Package
-Title: Using Rcpp to wrap the libxlsxwriter C library.
+Title: Using Rcpp to wrap the libxlsxwriter C library
 Version: 0.1.0
 Authors@R: c(
   person("Carl","Ganz",email="carlganz@ucla.edu",role=c("aut","cre")),
